fixed /reportedPosts issue and alignment issues

--- a/src/app/admin/jobs-applied/jobs-applied.component.css
+++ b/src/app/admin/jobs-applied/jobs-applied.component.css
@@ -207,11 +207,10 @@ mat-spinner {
 /* JOBS WITH APPLICATIONS CARDS
 -------------------------------------------------- */
 .applied-posts-div {
-  justify-content: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   align-content: space-around;
 }
 
